--- a/_includes/default.html
+++ b/_includes/default.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{ page.title }}</title>
-	<link href='//linuxsec.org/favicon.ico' rel='icon' type='image/x-icon'/>
+	<link href='/favicon.ico' rel='icon' type='image/x-icon'/>
 	{% if page.description %}
 	<meta name="description" content="{{ page.description }}">
 	{% endif %}
