--- a/_includes/default.html
+++ b/_includes/default.html
@@ -6,6 +6,8 @@
 	<link href="/favicon.ico" rel="icon" type="image/x-icon"/>
 	{% if page.description %}
 	<meta name="description" content="{{ page.description }}">
+	{% else %}
+	<meta name="description" content="zafk1el personal blog, blogger, sysadmin" />
 	{% endif %}
 	<meta name="author" content="{{ site.author.name }}">
 
